# Smart-Health-Assistant

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml  test_clinic.py  test_clinic_issue.py  test_exit_phrases.py  test_router.py
backend/agents/: advisor.py  clinic.py  graph.py  insurance.py  llm.py  pharmacy.py  report.py  router.py  state.py
backend/docs/: agent_design.md  langgraph_advisor_agent.md  langgraph_clinic_agent.md  langgraph_frontend_ui_state.md  langgraph_report_agent.md  langgraph_router_agent.md
backend/rag/: __init__.py  embeddings.py  ingest.py  knowledge_base.py  vectorstores.py
backend/rag/documents/: insurance_policies.md  lab_reference.md  medical_knowledge.md  pharmacy_knowledge.md
backend/skills/: __init__.py  base.py
backend/skills/emergency_triage/: SKILL.md  skill.py
backend/skills/health_calculator/: SKILL.md  skill.py
backend/skills/lab_interpreter/: SKILL.md  skill.py
backend/skills/medication_calculator/: SKILL.md  skill.py
backend/skills/risk_assessor/: SKILL.md  skill.py
backend/skills/symptom_scorer/: SKILL.md  skill.py
docs/: rag.md  skills.md
frontend/: package-lock.json  package.json  test_console.cjs  test_debug.cjs  test_pw.cjs  test_review.cjs
frontend/docs/: desgin.md
frontend/docs/modules/: 00-core-architecture.md  01-ai-chat-root.md  02-ai-clinic.md  03-insurance.md  04-pharmacy.md  05-health-dashboard.md  06-medical-services.md  07-report-folder.md
frontend/src/: App.tsx
frontend/src/data/: mockData.ts
frontend/src/services/: chatService.ts
(+39 files in other folders)
